--- a/example1.ipynb
+++ b/example1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ELEMENT 1"
+    "## Find the stiffness matrix of each element\n",
+    "to find the stiffness matrix of each element we follow this formula:\n",
+    "\n",
+    "$$\n",
+    "k = \\frac{E A}{L}\n",
+    "\\begin{bmatrix}\n",
+    "c^2 & c s & -c^2 & -c s \\\\\n",
+    "c s & s^2 & -c s & -s^2 \\\\\n",
+    "-c^2 & -c s & c^2 & c s \\\\\n",
+    "-c s & -s^2 & c s & s^2\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "- $E$ is the modulus of elasticity\n",
+    "- $A$ is the cross-sectional area\n",
+    "- $L$ is the length of the element\n",
+    "- $c = \\cos(\\theta)$\n",
+    "- $s = \\sin(\\theta)$\n",
+    "- $\\theta$ is the angle between the element and the x-axis\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### element 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,12 +108,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ELEMENT 2"
+    "### element 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,12 +162,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Primary stiffness matrix for structure"
+    "## Primary stiffness matrix for structure\n",
+    "to find the primary stiffness matrix of the whole structure, we divide the stiffness matrix of a element we've found above into 4 submatrices and then we add them to the primary stiffness matrix of the structure:\n",
+    "\n",
+    "$$\n",
+    "K_{i} =\n",
+    "\\begin{bmatrix}\n",
+    "k_{11} & k_{12} & k_{13} & k_{14} \\\\\n",
+    "k_{21} & k_{22} & k_{23} & k_{24} \\\\\n",
+    "k_{31} & k_{32} & k_{33} & k_{34} \\\\\n",
+    "k_{41} & k_{42} & k_{43} & k_{44}\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "K_{11} & K_{12} \\\\\n",
+    "K_{21} & K_{22}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "then we add the submatrices to the primary stiffness matrix of the structure:\n",
+    "\n",
+    "$$\n",
+    "KP=\n",
+    "\\begin{bmatrix}\n",
+    "KP_{11} & KP_{12} & KP_{13} \\\\\n",
+    "KP_{21} & KP_{22} & KP_{23} \\\\\n",
+    "KP_{31} & KP_{32} & KP_{33}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "the elements of the primary stiffness matrix of the structure are:\n",
+    "$$\n",
+    "KP =\n",
+    "\\begin{bmatrix}\n",
+    "Ka_{11} & Ka_{12} & 0 \\\\\n",
+    "Ka_{21} & Ka_{22} + Kb_{11} & Kb_{12} \\\\\n",
+    "0 & Kb_{32} & Kb_{33}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
