add document for step 5

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -261,7 +261,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding boundary conditions due to supports"
+    "## Adding boundary conditions due to supports\n",
+    "because of the displacement of the support is zero, we can remove the rows and columns or just impose 1 and 0 in the diagonal of the primary stiffness matrix of the structure.\n",
+    "\n",
+    "$$\n",
+    "K_{structure} =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & kp_{33} & kp_{34} & 0 & 0 \\\\\n",
+    "0 & 0 & kp_{43} & kp_{44} & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 1 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 1\n",
+    "\\end{bmatrix}\n",
+    "$$\n"
    ]
   },
   {
@@ -315,12 +328,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## finding the displacement vector"
+    "## Finding the displacement vector\n",
+    "To find the displacement vector we use the formula:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "u_{x1}  \\\\\n",
+    "u_{y1}  \\\\\n",
+    "u_{x2}  \\\\\n",
+    "u_{y2}  \\\\\n",
+    "u_{x3}  \\\\\n",
+    "u_{y3}\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "K_{structure}\n",
+    "\\end{bmatrix}^{-1}\n",
+    "\\begin{bmatrix}\n",
+    "F_{x1} \\\\\n",
+    "F_{y1} \\\\\n",
+    "F_{x2} \\\\\n",
+    "F_{y2} \\\\\n",
+    "F_{x3} \\\\\n",
+    "F_{y3}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "- $u$ is the displacement vector\n",
+    "- $F$ is the force \n",
+    "\n",
+    "In this case we can simplify the formula to:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "u_{x2}  \\\\\n",
+    "u_{y2}  \n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "kp_{33} & kp_{34} \\\\\n",
+    "kp_{43} & kp_{33}\n",
+    "\\end{bmatrix}^{-1}\n",
+    "\\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "150\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "- The force is 150 because the force is applied in the y direction and the displacement in the x direction is zero.\n",
+    "- The displacement we have found is the global displacement at node 2.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -383,12 +445,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## finding the reaction forces"
+    "## Finding the reaction forces\n",
+    "To find the reaction forces we use the formula:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "F_{x1} \\\\\n",
+    "F_{y1} \\\\\n",
+    "F_{x2} \\\\\n",
+    "F_{y2} \\\\\n",
+    "F_{x3} \\\\\n",
+    "F_{y3}\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "K_{primary}\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "U_{global}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "- $F$ is the force (it can be reaction or the force applied)\n",
+    "- $K_{primary}$ is the primary stiffness matrix of the structure (the matrix we haven't imposed the boundary conditions)\n",
+    "- $U_{global}$ is the global displacement vector\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
