add document for step 6

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -507,7 +507,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Internal force in element 1"
+    "## Internal force in element 1\n",
+    "To find the internal force in element 1 we use the formula:\n",
+    "\n",
+    "$$\n",
+    "F = \\frac{E A}{L} \\cdot (Ux_{local 2} - Ux_{local 1})\n",
+    "$$\n",
+    "\n",
+    "In the case the bar element have an angle with the x-axis, we need to rotate the displacement vector to the local coordinate system of the element. To do that we use the formula:\n",
+    "\n",
+    "$$\n",
+    "\\begin{matrix}\n",
+    "Ux_{local 1} \\\\ \n",
+    "Uy_{local 2}\n",
+    "\\end{matrix}\n",
+    "= \n",
+    "\\begin{bmatrix}\n",
+    "c & s & 0 & 0 \\\\\n",
+    "0 & 0 & c & s \n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "Ux_{global 1} \\\\\n",
+    "Uy_{global 1} \\\\\n",
+    "Ux_{global 2} \\\\\n",
+    "Uy_{global 2}\n",
+    "\\end{bmatrix}\n",
+    "$$\n"
    ]
   },
   {
