add global stiffness matrix of a bar

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,57 @@
     "\n",
     "# constants\n",
     "E =  200*10**9 #(N/m^2)\n",
-    "A =  0.005 #(m^2)"
+    "A =  0.005 #(m^2)\n",
+    "\n",
+    "# we have 2 degrees of freedom each node, so the total degrees of freedom is 2*number of nodes, which is 6\n",
+    "nDof = 6\n",
+    "\n",
+    "# the first and third nodes are supports so they are restrained in the x and y directions\n",
+    "# this is used for imposing the boundary conditions\n",
+    "restrained_Dof = [1,2,5,6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utils \n",
+    "> this section is for defining the functions that will be used in the main code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kg_generator(E, A, L, Theta):\n",
+    "    \"\"\"\n",
+    "    This function generates the global stiffness matrix for a bar element\n",
+    "\n",
+    "    Args:\n",
+    "        E: Young's modulus\n",
+    "        A: Area of the cross section\n",
+    "        L: Length of the element\n",
+    "        Theta: Angle of the element with respect to the x-axis\n",
+    "\n",
+    "    Returns:\n",
+    "        The global stiffness matrix for each element\n",
+    "    \"\"\"\n",
+    "\n",
+    "    c = math.cos(Theta)\n",
+    "    s = math.sin(Theta)\n",
+    "\n",
+    "    # quadrants\n",
+    "    K11 = (E*A/L)*np.array([[c**2, c*s], [c*s, s**2]])\n",
+    "    K12 = (E*A/L)*np.array([[-c**2, -c*s], [-c*s, -s**2]])\n",
+    "    K21 = (E*A/L)*np.array([[-c**2, -c*s], [-c*s, -s**2]])\n",
+    "    K22 = (E*A/L)*np.array([[c**2, c*s], [c*s, s**2]])\n",
+    "\n",
+    "    # the whole global stiffness matrix\n",
+    "    Kg = np.block([[K11, K12], [K21, K22]])\n",
+    "\n",
+    "    return Kg"
    ]
   },
   {
@@ -59,13 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "global stiffness matrix for element 1 (node 1 to 2)\n",
+      "[[ 3.33333333e+08  0.00000000e+00 -3.33333333e+08 -0.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00 -0.00000000e+00 -0.00000000e+00]\n",
+      " [-3.33333333e+08 -0.00000000e+00  3.33333333e+08  0.00000000e+00]\n",
+      " [-0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n",
       "global stiffness matrix for element 1 (node 1 to 2)\n",
       "[[ 3.33333333e+08  0.00000000e+00 -3.33333333e+08 -0.00000000e+00]\n",
       " [ 0.00000000e+00  0.00000000e+00 -0.00000000e+00 -0.00000000e+00]\n",
@@ -382,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
