--- a/example1.ipynb
+++ b/example1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -121,11 +121,8 @@
       " [ 0.00000000e+00  0.00000000e+00 -0.00000000e+00 -0.00000000e+00]\n",
       " [-3.33333333e+08 -0.00000000e+00  3.33333333e+08  0.00000000e+00]\n",
       " [-0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n",
-      "global stiffness matrix for element 1 (node 1 to 2)\n",
-      "[[ 3.33333333e+08  0.00000000e+00 -3.33333333e+08 -0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00 -0.00000000e+00 -0.00000000e+00]\n",
-      " [-3.33333333e+08 -0.00000000e+00  3.33333333e+08  0.00000000e+00]\n",
-      " [-0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
+      "[[3.33333333e+08 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00]]\n"
      ]
     }
    ],
@@ -133,27 +130,11 @@
     "theta = 0 #rads\n",
     "L = 3 #m\n",
     "\n",
-    "# positive quadrant of the transformtion matrix\n",
-    "e11 = math.cos(theta)**2\n",
-    "e12 = math.cos(theta)*math.sin(theta)\n",
-    "e21 = math.cos(theta)*math.sin(theta)\n",
-    "e22 = math.sin(theta)**2\n",
-    "\n",
-    "# negative quadrant of the transformtion matrix\n",
-    "e_11 = -math.cos(theta)**2\n",
-    "e_12 = -math.cos(theta)*math.sin(theta)\n",
-    "e_21 = -math.cos(theta)*math.sin(theta)\n",
-    "e_22 = -math.sin(theta)**2\n",
-    "\n",
-    "K11_12 = (E*A/L)*np.array([[e11, e12], [e21, e22]])\n",
-    "K12_12 = (E*A/L)*np.array([[e_11, e_12], [e_21, e_22]])\n",
-    "K21_12 = (E*A/L)*np.array([[e_11, e_12], [e_21, e_22]])\n",
-    "K22_12 = (E*A/L)*np.array([[e11, e12], [e21, e22]])\n",
-    "\n",
-    "top = np.concatenate((K11_12, K12_12), axis=1)\n",
-    "bottom = np.concatenate((K21_12, K22_12), axis=1)\n",
-    "\n",
-    "K_12 = np.concatenate((top, bottom), axis=0)\n",
+    "K_12 = kg_generator(E, A, L, theta)\n",
+    "K11_12 = K_12[:2, :2]\n",
+    "K12_12 = K_12[:2, 2:]\n",
+    "K21_12 = K_12[2:, :2]\n",
+    "K22_12 = K_12[2:, 2:]\n",
     "\n",
     "print(\"global stiffness matrix for element 1 (node 1 to 2)\")\n",
     "print(np.round(K_12, 3))\n"
@@ -168,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +160,9 @@
       "[[ 7.11759367e+07 -9.57558007e+07 -7.11759367e+07  9.57558007e+07]\n",
       " [-9.57558007e+07  1.28824063e+08  9.57558007e+07 -1.28824063e+08]\n",
       " [-7.11759367e+07  9.57558007e+07  7.11759367e+07 -9.57558007e+07]\n",
-      " [ 9.57558007e+07 -1.28824063e+08 -9.57558007e+07  1.28824063e+08]]\n"
+      " [ 9.57558007e+07 -1.28824063e+08 -9.57558007e+07  1.28824063e+08]]\n",
+      "[[ 7.11759367e+07 -9.57558007e+07]\n",
+      " [-9.57558007e+07  1.28824063e+08]]\n"
      ]
     }
    ],
@@ -187,27 +170,12 @@
     "theta2 = 2.21 #rads\n",
     "L2 = 5 #m\n",
     "\n",
-    "# positive quadrant of the transformtion matrix\n",
-    "e11 = math.cos(theta2)**2\n",
-    "e12 = math.cos(theta2)*math.sin(theta2)\n",
-    "e21 = math.cos(theta2)*math.sin(theta2)\n",
-    "e22 = math.sin(theta2)**2\n",
+    "K_23 = kg_generator(E, A, L2, theta2)\n",
     "\n",
-    "# negative quadrant of the transformtion matrix\n",
-    "e_11 = -math.cos(theta2)**2\n",
-    "e_12 = -math.cos(theta2)*math.sin(theta2)\n",
-    "e_21 = -math.cos(theta2)*math.sin(theta2)\n",
-    "e_22 = -math.sin(theta2)**2\n",
-    "\n",
-    "K11_23 = (E*A/L2)*np.array([[e11, e12], [e21, e22]])\n",
-    "K12_23 = (E*A/L2)*np.array([[e_11, e_12], [e_21, e_22]])\n",
-    "K21_23 = (E*A/L2)*np.array([[e_11, e_12], [e_21, e_22]])\n",
-    "K22_23 = (E*A/L2)*np.array([[e11, e12], [e21, e22]])\n",
-    "\n",
-    "top2 = np.concatenate((K11_23, K12_23), axis=1)\n",
-    "bottom2 = np.concatenate((K21_23, K22_23), axis=1)\n",
-    "\n",
-    "K_23 = np.concatenate((top2, bottom2), axis=0)\n",
+    "K11_23 = K_23[:2, :2]\n",
+    "K12_23 = K_23[:2, 2:]\n",
+    "K21_23 = K_23[2:, :2]\n",
+    "K22_23 = K_23[2:, 2:]\n",
     "\n",
     "print(\"global stiffness matrix for element 2 (node 2 to 3)\")\n",
     "print(np.round(K_23, 3))"
@@ -262,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
