--- a/example1.ipynb
+++ b/example1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -120,9 +120,7 @@
       "[[ 3.33333333e+08  0.00000000e+00 -3.33333333e+08 -0.00000000e+00]\n",
       " [ 0.00000000e+00  0.00000000e+00 -0.00000000e+00 -0.00000000e+00]\n",
       " [-3.33333333e+08 -0.00000000e+00  3.33333333e+08  0.00000000e+00]\n",
-      " [-0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n",
-      "[[3.33333333e+08 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00]]\n"
+      " [-0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
      ]
     }
    ],
@@ -137,7 +135,7 @@
     "K22_12 = K_12[2:, 2:]\n",
     "\n",
     "print(\"global stiffness matrix for element 1 (node 1 to 2)\")\n",
-    "print(KG_12)\n"
+    "print(K_12)\n"
    ]
   },
   {
@@ -149,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -160,9 +158,7 @@
       "[[ 7.11759367e+07 -9.57558007e+07 -7.11759367e+07  9.57558007e+07]\n",
       " [-9.57558007e+07  1.28824063e+08  9.57558007e+07 -1.28824063e+08]\n",
       " [-7.11759367e+07  9.57558007e+07  7.11759367e+07 -9.57558007e+07]\n",
-      " [ 9.57558007e+07 -1.28824063e+08 -9.57558007e+07  1.28824063e+08]]\n",
-      "[[ 7.11759367e+07 -9.57558007e+07]\n",
-      " [-9.57558007e+07  1.28824063e+08]]\n"
+      " [ 9.57558007e+07 -1.28824063e+08 -9.57558007e+07  1.28824063e+08]]\n"
      ]
     }
    ],
@@ -178,7 +174,7 @@
     "K22_23 = K_23[2:, 2:]\n",
     "\n",
     "print(\"global stiffness matrix for element 2 (node 2 to 3)\")\n",
-    "print(np.round(KG_23, 3))"
+    "print(K_23)"
    ]
   },
   {
@@ -230,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
