feat: add ks_generator function

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,25 @@
     "    # the whole global stiffness matrix\n",
     "    Kg = np.block([[K11, K12], [K21, K22]])\n",
     "\n",
-    "    return Kg"
+    "    return Kg\n",
+    "\n",
+    "def ks_generator(Kp, restrained_Dof):\n",
+    "    \"\"\"\n",
+    "        This function will impose the boundary conditions on the primary global stiffness matrix\n",
+    "\n",
+    "        Args:\n",
+    "            Kp: Primary global stiffness matrix\n",
+    "            restrained_Dof: The degrees of freedom that are restrained\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    for i in restrained_Dof:\n",
+    "        Kp[i-1,:] = 0\n",
+    "        Kp[:,i-1] = 0\n",
+    "        Kp[i-1,i-1] = 1\n",
+    "        Ks = copy.deepcopy(Kp)\n",
+    "    \n",
+    "    return Ks"
    ]
   },
   {
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -322,22 +340,7 @@
     }
    ],
    "source": [
-    "KP_imposed = copy.copy(KP)\n",
-    "\n",
-    "KP_imposed[:, 0] = 0\n",
-    "KP_imposed[0, :] = 0\n",
-    "KP_imposed[:, 1] = 0\n",
-    "KP_imposed[1, :] = 0\n",
-    "KP_imposed[:, 4] = 0\n",
-    "KP_imposed[4, :] = 0\n",
-    "KP_imposed[:, 5] = 0\n",
-    "KP_imposed[5, :] = 0\n",
-    "\n",
-    "KP_imposed[0, 0] = 1\n",
-    "KP_imposed[1, 1] = 1\n",
-    "KP_imposed[4, 4] = 1\n",
-    "KP_imposed[5, 5] = 1\n",
-    "\n",
+    "KP_imposed = ks_generator(KP, restrained_Dof)\n",
     "\n",
     "print(\"global stiffness matrix for the entire structure with imposed displacements\")\n",
     "print(np.round(KP_imposed, 5))"
@@ -401,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -502,12 +505,12 @@
      "text": [
       "[[ 0.          0.         -0.00033449 -0.00141301  0.          0.        ]]\n",
       "Force vector:\n",
-      "[[ 111496.018]\n",
-      " [      0.   ]\n",
-      " [     -0.   ]\n",
-      " [-150000.   ]\n",
-      " [-111496.018]\n",
-      " [ 150000.   ]]\n"
+      "[[      0.]\n",
+      " [      0.]\n",
+      " [     -0.]\n",
+      " [-150000.]\n",
+      " [      0.]\n",
+      " [      0.]]\n"
      ]
     }
    ],
@@ -557,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
