feat: add function to calculate member internal force

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,38 @@
     "        Kp[i-1,i-1] = 1\n",
     "        Ks = copy.deepcopy(Kp)\n",
     "    \n",
-    "    return Ks"
+    "    return Ks\n",
+    "\n",
+    "def member_internalforce(E, A, L, theta, globalDisp, member_index, factor=\"N\"):\n",
+    "    \"\"\"\n",
+    "        This function calculates the internal force in a bar element member\n",
+    "\n",
+    "        Args:\n",
+    "            E: Young's modulus\n",
+    "            A: Area of the cross section\n",
+    "            L: Length of the element\n",
+    "            theta: Angle of the element with respect to the x-axis\n",
+    "            globalDisp: Global displacement vector\n",
+    "            member_index: The index of the member\n",
+    "\n",
+    "        Returns:\n",
+    "            The internal force in the member\n",
+    "    \"\"\"\n",
+    "\n",
+    "    c = math.cos(theta)\n",
+    "    s = math.sin(theta)\n",
+    "\n",
+    "    T = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
+    "    UGW = np.array([globalDisp[member_index[0]-1], globalDisp[member_index[0]], globalDisp[member_index[1]], globalDisp[member_index[1]+1]])    \n",
+    "\n",
+    "    UL = np.dot(T, UGW)\n",
+    "\n",
+    "    FL1 = (E*A/L)*(UL[0] - UL[1])\n",
+    "\n",
+    "    if factor == \"N\":\n",
+    "        return FL1.item()\n",
+    "    elif factor == \"kN\":\n",
+    "        return FL1.item()/1000"
    ]
   },
   {
@@ -560,56 +591,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transformation matrix:\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "Global displacement vector:\n",
-      "[[ 0.        ]\n",
-      " [ 0.        ]\n",
-      " [-0.00033449]\n",
-      " [-0.00141301]] \n",
-      "\n",
-      "Local displacement vector:\n",
-      "[0.]\n",
-      "[-0.00033449] \n",
-      "\n",
-      "Local force:\n",
-      "111.496 kN\n"
+      "Member internal force:\n",
+      "111.49601826364949 kN\n"
      ]
     }
    ],
    "source": [
     "# transformation matrix\n",
-    "c = math.cos(theta)\n",
-    "s = math.sin(theta)\n",
-    "T = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
+    "# c = math.cos(theta)\n",
+    "# s = math.sin(theta)\n",
+    "# T = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
+    "# UGW = np.array([[0], [0], [U[0, 0]], [U[1, 0]]])\n",
     "\n",
-    "print(\"Transformation matrix:\")\n",
-    "print(T,\"\\n\")\n",
+    "# print(T,\"\\n\")\n",
     "\n",
-    "# global displacement vector\n",
-    "print(\"Global displacement vector:\")\n",
-    "UGW = np.array([[0], [0], [U[0, 0]], [U[1, 0]]])\n",
-    "print(UGW,\"\\n\")\n",
+    "# # global displacement vector\n",
+    "# print(UGW,\"\\n\")\n",
     "\n",
-    "# local displacement vector \n",
-    "print(\"Local displacement vector:\")\n",
-    "UL = np.dot(T, UGW)\n",
-    "print(UL[0])\n",
-    "print(UL[1],\"\\n\")\n",
+    "# # local displacement vector \n",
+    "# print(\"Local displacement vector:\")\n",
+    "# UL = np.dot(T, UGW)\n",
+    "# print(UL[0])\n",
+    "# print(UL[1],\"\\n\")\n",
     "\n",
-    "# local force vector\n",
-    "print(\"Local force:\")\n",
-    "FL1 = (E*A/L)*(UL[0] - UL[1])\n",
-    "print(round(FL1.item()/1000, 3), \"kN\")\n"
+    "# # local force vector\n",
+    "# print(\"Local force:\")\n",
+    "# FL1 = (E*A/L)*(UL[0] - UL[1])\n",
+    "# print(round(FL1.item()/1000, 3), \"kN\")\n",
+    "\n",
+    "member1_index = [1,2]\n",
+    "\n",
+    "print(\"Member internal force:\")\n",
+    "print(member_internalforce(E, A, L, theta, UG, member1_index, \"kN\"), \"kN\")\n"
    ]
   },
   {
@@ -634,22 +654,22 @@
     }
    ],
    "source": [
-    "## Internal force in element 2\n",
-    "# transformation matrix\n",
-    "c = math.cos(theta2)\n",
-    "s = math.sin(theta2)\n",
-    "T2 = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
+    "# ## Internal force in element 2\n",
+    "# # transformation matrix\n",
+    "# c = math.cos(theta2)\n",
+    "# s = math.sin(theta2)\n",
+    "# T2 = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
     "\n",
-    "# global displacement vector\n",
-    "UGW2 = np.array([[U[0, 0]], [U[1, 0]], [0], [0]])\n",
+    "# # global displacement vector\n",
+    "# UGW2 = np.array([[U[0, 0]], [U[1, 0]], [0], [0]])\n",
     "\n",
-    "# local displacement vector\n",
-    "UL2 = np.dot(T2, UGW2)\n",
+    "# # local displacement vector\n",
+    "# UL2 = np.dot(T2, UGW2)\n",
     "\n",
-    "# local force vector\n",
-    "FL2 = (E*A/L2)*(UL2[0] - UL2[1])\n",
-    "print(\"Internal force in element 2:\")\n",
-    "print(round(FL2.item()/1000, 3), \"kN\")"
+    "# # local force vector\n",
+    "# FL2 = (E*A/L2)*(UL2[0] - UL2[1])\n",
+    "# print(\"Internal force in element 2:\")\n",
+    "# print(round(FL2.item()/1000, 3), \"kN\")"
    ]
   },
   {
