fix: fixed the displacement deeterminationtask in member_internalforce function

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,18 +109,21 @@
     "\n",
     "    c = math.cos(theta)\n",
     "    s = math.sin(theta)\n",
+    "    \n",
+    "    subvector_index1 = (member_index[0]-1) * 2\n",
+    "    subvector_index2 = (member_index[1]-1) * 2\n",
     "\n",
     "    T = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
-    "    UGW = np.array([globalDisp[member_index[0]-1], globalDisp[member_index[0]], globalDisp[member_index[1]], globalDisp[member_index[1]+1]])    \n",
+    "    UGW = np.array([globalDisp[subvector_index1], globalDisp[subvector_index1+1], globalDisp[subvector_index2], globalDisp[subvector_index2+1]])\n",
     "\n",
     "    UL = np.dot(T, UGW)\n",
     "\n",
-    "    FL1 = (E*A/L)*(UL[0] - UL[1])\n",
+    "    FL = (E*A/L)*(UL[0] - UL[1])\n",
     "\n",
     "    if factor == \"N\":\n",
-    "        return FL1.item()\n",
+    "        return FL.item()\n",
     "    elif factor == \"kN\":\n",
-    "        return FL1.item()/1000"
+    "        return FL.item()/1000"
    ]
   },
   {
@@ -158,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -599,33 +602,15 @@
      "output_type": "stream",
      "text": [
       "Member internal force:\n",
+      "[[ 0.        ]\n",
+      " [ 0.        ]\n",
+      " [-0.00033449]\n",
+      " [-0.00141301]]\n",
       "111.49601826364949 kN\n"
      ]
     }
    ],
    "source": [
-    "# transformation matrix\n",
-    "# c = math.cos(theta)\n",
-    "# s = math.sin(theta)\n",
-    "# T = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
-    "# UGW = np.array([[0], [0], [U[0, 0]], [U[1, 0]]])\n",
-    "\n",
-    "# print(T,\"\\n\")\n",
-    "\n",
-    "# # global displacement vector\n",
-    "# print(UGW,\"\\n\")\n",
-    "\n",
-    "# # local displacement vector \n",
-    "# print(\"Local displacement vector:\")\n",
-    "# UL = np.dot(T, UGW)\n",
-    "# print(UL[0])\n",
-    "# print(UL[1],\"\\n\")\n",
-    "\n",
-    "# # local force vector\n",
-    "# print(\"Local force:\")\n",
-    "# FL1 = (E*A/L)*(UL[0] - UL[1])\n",
-    "# print(round(FL1.item()/1000, 3), \"kN\")\n",
-    "\n",
     "member1_index = [1,2]\n",
     "\n",
     "print(\"Member internal force:\")\n",
@@ -641,35 +626,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal force in element 2:\n",
-      "-186.899 kN\n"
+      "Member internal force:\n",
+      "[[-0.00033449]\n",
+      " [-0.00141301]\n",
+      " [ 0.        ]\n",
+      " [ 0.        ]]\n",
+      "-186.8993367795832 kN\n"
      ]
     }
    ],
    "source": [
-    "# ## Internal force in element 2\n",
-    "# # transformation matrix\n",
-    "# c = math.cos(theta2)\n",
-    "# s = math.sin(theta2)\n",
-    "# T2 = np.array([[c, s, 0, 0], [0, 0, c, s]])\n",
+    "member2_index = [2,3]\n",
     "\n",
-    "# # global displacement vector\n",
-    "# UGW2 = np.array([[U[0, 0]], [U[1, 0]], [0], [0]])\n",
-    "\n",
-    "# # local displacement vector\n",
-    "# UL2 = np.dot(T2, UGW2)\n",
-    "\n",
-    "# # local force vector\n",
-    "# FL2 = (E*A/L2)*(UL2[0] - UL2[1])\n",
-    "# print(\"Internal force in element 2:\")\n",
-    "# print(round(FL2.item()/1000, 3), \"kN\")"
+    "print(\"Member internal force:\")\n",
+    "print(member_internalforce(E, A, L2, theta2, UG, member2_index, \"kN\"), \"kN\")"
    ]
   },
   {
@@ -681,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
