chores: organize into subjects

--- a/Uncertainty, Risk and Reliability Part 1/failureProb_basic.ipynb
+++ b/Uncertainty, Risk and Reliability Part 1/failureProb_basic.ipynb
@@ -10,8 +10,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.stats import norm\n",
-    "import ipywidgets as widgets    "
+    "from scipy.stats import norm   \n",
+    "import ipywidgets as widgets"
    ]
   },
   {
@@ -84,64 +84,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_standard_normal_pdf_cdf_with_failure_interactive(mC=100, sC=15, mD=60, sD=8):    \n",
+    "    mean = mC-mD\n",
+    "    std_dev = math.sqrt(sC**2 + sD**2)    \n",
+    "    failure_boundary = 0\n",
+    "    \n",
+    "    # Generate z values\n",
+    "    z = np.linspace(-4, 4, 1000)\n",
+    "    \n",
+    "    # Calculate PDF and CDF\n",
+    "    pdf = norm.pdf(z)\n",
+    "    cdf = norm.cdf(z)\n",
+    "    \n",
+    "    # Calculate the safety/reliability index\n",
+    "    z_failure = (failure_boundary - mean) / std_dev\n",
+    "    \n",
+    "    # Calculate the probability of failure\n",
+    "    prob_failure = norm.cdf(z_failure)\n",
+    "    \n",
+    "    # Create the plot with two subplots\n",
+    "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(14, 10))\n",
+    "    fig.suptitle(f'Standard Normal Distribution: PDF and CDF\\nNon-standard Distribution: μ={mean}, σ={std_dev}', fontsize=16)\n",
+    "    \n",
+    "    # Plot PDF\n",
+    "    ax1.plot(z, pdf, 'b-', label='Probability Density Function')\n",
+    "    ax1.fill_between(z[z < z_failure], pdf[z < z_failure], alpha=0.3, color='red', \n",
+    "                     label=f'Failure Area: {prob_failure:.4f}')\n",
+    "    ax1.axvline(0, color='g', linestyle='--', label='z = 0')\n",
+    "    ax1.axvline(z_failure, color='r', linestyle='--', label=f'z_failure = {z_failure:.4f}')\n",
+    "    ax1.set_xlabel('z')\n",
+    "    ax1.set_ylabel('Probability Density')\n",
+    "    ax1.grid(True)\n",
+    "    ax1.legend()\n",
+    "    \n",
+    "    # Plot CDF\n",
+    "    ax2.plot(z, cdf, 'b-', label='Cumulative Distribution Function')\n",
+    "    ax2.axhline(prob_failure, color='r', linestyle=':', \n",
+    "                label=f'P(Failure) = {prob_failure:.4f}')\n",
+    "    ax2.axvline(0, color='g', linestyle='--', label='z = 0')\n",
+    "    ax2.axvline(z_failure, color='r', linestyle='--', label=f'z_failure = {z_failure:.4f}')\n",
+    "    \n",
+    "    # Add arrow and annotation for CDF\n",
+    "    ax2.annotate('', xy=(z_failure, prob_failure), xytext=(z_failure, 0),\n",
+    "                 arrowprops=dict(arrowstyle='<->', color='red'))\n",
+    "    ax2.text(z_failure + 0.1, prob_failure/2, f'{prob_failure:.4f}', \n",
+    "             color='red', va='center', ha='left')\n",
+    "    \n",
+    "    ax2.set_xlabel('z')\n",
+    "    ax2.set_ylabel('Cumulative Probability')\n",
+    "    ax2.grid(True)\n",
+    "    ax2.legend()\n",
+    "    plt.subplots_adjust(bottom=0.08)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "940edb2d057c40c6a9e8f9b267262d78",
+       "model_id": "b7b3ccd6bf9248e7804e34e2e4724449",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=50.0, description='mean'), FloatSlider(value=10.0, description='std', …"
+       "interactive(children=(FloatSlider(value=100.0, description='mC', max=200.0), FloatSlider(value=15.0, descripti…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.normal_pdf(mean, std)>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "def normal_pdf(mean, std):\n",
-    "    x = np.linspace(mean - 4*std, mean + 4*std, 100)\n",
-    "    data = norm.pdf(x, mean, std)\n",
-    "\n",
-    "    # calculate the 5th percentile\n",
-    "    fifth_percentile = norm.ppf(0.05, mean, std)\n",
-    "    fifth_percentile_value = norm.pdf(fifth_percentile, mean, std)\n",
-    "\n",
-    "    # Plotting the normal distribution PDF\n",
-    "    plt.figure(figsize=(16, 6))\n",
-    "    sns.lineplot(x=x, y=data, label='normal distribution PDF')\n",
-    "\n",
-    "    plt.axvline(mean, color='r', linestyle='--', label='mean')\n",
-    "    plt.axvline(fifth_percentile, color='g', linestyle='--', label='5th percentile')\n",
-    "    plt.axhline(fifth_percentile_value, color='b', linestyle='--', label='5th percentile value')\n",
-    "    plt.text(mean - 3*std, fifth_percentile_value, f'{fifth_percentile_value:.5f}', color='b')\n",
-    "    plt.text(fifth_percentile, 0, f'{fifth_percentile:.2f}', color='g')\n",
-    "    plt.fill_between(x, 0, data, where=(x <= fifth_percentile), color='red', alpha=0.15, label='5th percentile area')\n",
-    "\n",
-    "\n",
-    "    plt.title('Normal Distribution PDF for mean = {} and std = {}'.format(mean, std))\n",
-    "    plt.xlabel('x')\n",
-    "    plt.ylabel('PD')\n",
-    "    plt.legend(loc='upper right')\n",
-    "    plt.grid(True, which='both', linestyle=':', linewidth=0.35)\n",
-    "    plt.show()\n",
-    "\n",
-    "widgets.interact(normal_pdf, mean=(0, 100, 0.1), std=(1, 20, 0.1))"
+    "interactive_plot = widgets.interact(plot_standard_normal_pdf_cdf_with_failure_interactive, \n",
+    "                                       mC=(0, 200, 0.1), \n",
+    "                                       sC=(0, 200, 0.1), \n",
+    "                                       mD=(0, 180, 0.1),  \n",
+    "                                       sD=(0, 180, 0.1))"
    ]
   }
  ],
