chore: clean up unused code line

--- a/Direct Stiffness/large_StructureAnalysis.ipynb
+++ b/Direct Stiffness/large_StructureAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -129,34 +129,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.00000000e-01 -1.22464680e-17 -1.00000000e-01  1.22464680e-17]\n",
-      " [-1.22464680e-17  1.49975978e-33  1.22464680e-17 -1.49975978e-33]\n",
-      " [-1.00000000e-01  1.22464680e-17  1.00000000e-01 -1.22464680e-17]\n",
-      " [ 1.22464680e-17 -1.49975978e-33 -1.22464680e-17  1.49975978e-33]]\n",
-      "[[ 0.1  0.  -0.1 -0. ]\n",
-      " [ 0.   0.  -0.  -0. ]\n",
-      " [-0.1 -0.   0.1  0. ]\n",
-      " [-0.  -0.   0.   0. ]]\n",
-      "[[ 0.025      -0.04330127 -0.025       0.04330127]\n",
-      " [-0.04330127  0.075       0.04330127 -0.075     ]\n",
-      " [-0.025       0.04330127  0.025      -0.04330127]\n",
-      " [ 0.04330127 -0.075      -0.04330127  0.075     ]]\n",
-      "[[ 0.025       0.04330127 -0.025      -0.04330127]\n",
-      " [ 0.04330127  0.075      -0.04330127 -0.075     ]\n",
-      " [-0.025      -0.04330127  0.025       0.04330127]\n",
-      " [-0.04330127 -0.075       0.04330127  0.075     ]]\n",
-      "[[ 6.74891902e-33  3.67394040e-17 -6.74891902e-33 -3.67394040e-17]\n",
-      " [ 3.67394040e-17  2.00000000e-01 -3.67394040e-17 -2.00000000e-01]\n",
-      " [-6.74891902e-33 -3.67394040e-17  6.74891902e-33  3.67394040e-17]\n",
-      " [-3.67394040e-17 -2.00000000e-01  3.67394040e-17  2.00000000e-01]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "elm_A = bar_globalstiffness(E, A, L, 60, 0, 1, 'A')  # NODE 0-1 \n",
     "elm_B = bar_globalstiffness(E, A, L, 0, 1, 2, 'B')   # NODE 1-2  \n",
@@ -183,17 +156,12 @@
     "    Q22 = elm['global_stiffness'][2:, 2:]\n",
     "    elm['quadrants'] = [Q11, Q12, Q21, Q22]\n",
     "\n",
-    "prime = np.zeros((nDof, nDof))\n",
-    "# print(elm_D['global_stiffness'])\n",
-    "# print(elm_E['global_stiffness'])\n",
-    "# print(elm_F['global_stiffness'])\n",
-    "# print(elm_G['global_stiffness'])\n",
-    "# print(elm_H['global_stiffness'])\n"
+    "prime = np.zeros((nDof, nDof))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -218,29 +186,19 @@
    "source": [
     "for i in range(0, nDof, 2): # index of rows\n",
     "    for j in range(0, nDof, 2): # index of columns \n",
-    "        # this loop is iterating through the i row of the prime stiffness matrix\n",
-    "        # print(\"----------e:\",int(i/2),int(j/2))\n",
     "        dummy_quadrant = np.zeros((2,2))\n",
     "        for elm in ELM_ARR:\n",
     "            if i/2 == j/2 and i/2 == elm['node'][0]:\n",
     "                dummy_quadrant += elm['quadrants'][Quadrants['Q11']]\n",
-    "                # print(np.round(dummy_quadrant, 3))\n",
-    "                # print(\"i:\",i/2,\"j:\",j/2,'\\n')\n",
     "            \n",
     "            elif i/2 == j/2 and i/2 == elm['node'][1]:\n",
     "                dummy_quadrant += elm['quadrants'][Quadrants['Q22']]\n",
-    "                # print(np.round(dummy_quadrant, 3))\n",
-    "                # print(\"i:\",i/2,\"j:\",j/2,'\\n')\n",
     "\n",
     "            elif i/2 == elm['node'][0] and j/2 == elm['node'][1]:\n",
     "                dummy_quadrant += elm['quadrants'][Quadrants['Q12']]\n",
-    "                # print(np.round(dummy_quadrant, 5))\n",
-    "                # print(\"i:\",i/2,\"j:\",j/2,'\\n')\n",
     "            \n",
     "            elif i/2 == elm['node'][1] and j/2 == elm['node'][0]:\n",
     "                dummy_quadrant += elm['quadrants'][Quadrants['Q21']]\n",
-    "                # print(np.round(dummy_quadrant, 3))\n",
-    "                # print(\"i:\",i/2,\"j:\",j/2,'\\n')\n",
     "\n",
     "            prime[i:i+2, j:j+2] = dummy_quadrant\n",
     "\n",
